namespace changes